// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should render the component in closed state 1`] = `
<div
  className="sidebar "
>
  <nav
    className="nav"
  >
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "disabled": true,
          "icon": "logo",
          "name": "logo",
          "routeTo": "",
        }
      }
      rightNode=""
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "dashboard",
          "name": "Dashboard",
          "routeTo": "/dashboard",
        }
      }
      rightNode=""
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "layouts",
          "name": "Layouts",
          "routeTo": "/layouts",
        }
      }
      rightNode=""
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "graphs",
          "name": "Graphs",
          "routeTo": "/graphs",
        }
      }
      rightNode=""
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "mailbox",
          "links": Array [
            Object {
              "name": "Inbox",
              "routeTo": "/mailbox/inbox",
            },
            Object {
              "disabled": true,
              "name": "Email view",
              "routeTo": "/mailbox/email-view",
            },
            Object {
              "name": "Compose Email",
              "routeTo": "/mailbox/compose-email",
            },
            Object {
              "disabled": true,
              "name": "Email templates",
              "routeTo": "/mailbox/email-templates",
            },
          ],
          "name": "Mailbox",
          "routeTo": "/mailbox",
        }
      }
      rightNode={
        <Connect(InboxEmailsCount)
          showReadMailsCount={true}
        />
      }
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "metrics",
          "name": "Metrics",
          "routeTo": "/metrics",
        }
      }
      rightNode=""
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "widgets",
          "name": "Widgets",
          "routeTo": "/widgets",
        }
      }
      rightNode=""
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "forms",
          "name": "Forms",
          "routeTo": "/forms",
        }
      }
      rightNode=""
    />
  </nav>
</div>
`;

exports[`Sidebar should render the component in open state 1`] = `
<div
  className="sidebar sidebarOpen"
>
  <nav
    className="nav"
  >
    <div
      className="avatar avatarOpen"
    >
      <UserAvatar
        avatar="http://s.ndtvimg.com/images/entities/120/ms-dhoni-700.png"
        name="MS Dhoni"
        role="Wicket Keeper"
      />
    </div>
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "dashboard",
          "name": "Dashboard",
          "routeTo": "/dashboard",
        }
      }
      rightNode=""
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "layouts",
          "name": "Layouts",
          "routeTo": "/layouts",
        }
      }
      rightNode=""
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "graphs",
          "name": "Graphs",
          "routeTo": "/graphs",
        }
      }
      rightNode=""
    />
    <SidebarLink
      isSidebarOpen={true}
      link={
        Object {
          "icon": "mailbox",
          "links": Array [
            Object {
              "name": "Inbox",
              "routeTo": "/mailbox/inbox",
            },
            Object {
              "disabled": true,
              "name": "Email view",
              "routeTo": "/mailbox/email-view",
            },
            Object {
              "name": "Compose Email",
              "routeTo": "/mailbox/compose-email",
            },
            Object {
              "disabled": true,
              "name": "Email templates",
              "routeTo": "/mailbox/email-templates",
            },
          ],
          "name": "Mailbox",
          "routeTo": "/mailbox",
        }
      }
      rightNode={
        <Connect(InboxEmailsCount)
          showReadMailsCount={true}
        />
      }
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "metrics",
          "name": "Metrics",
          "routeTo": "/metrics",
        }
      }
      rightNode=""
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "widgets",
          "name": "Widgets",
          "routeTo": "/widgets",
        }
      }
      rightNode=""
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "forms",
          "name": "Forms",
          "routeTo": "/forms",
        }
      }
      rightNode=""
    />
  </nav>
</div>
`;
